--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="shortcut icon" href="https://cdn-icons.flaticon.com/png/128/5420/premium/5420548.png?token=exp=1636875281~hmac=a9ee053f5a3093efeb0b34dbf47f4d81" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
