--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <header>
         <nav>
+          <img width="100px" height="100px" src="https://upload.wikimedia.org/wikipedia/en/thumb/0/07/Ala-Too_International_University_Seal.png/220px-Ala-Too_International_University_Seal.png">
             <div class="logo">
+              
                Ala-Too International University
             </div>
             <div class="menu">
@@ -30,7 +32,7 @@
             <div class="headerleft">
                 <p class="bigger">Change is the End Result of All True Learning</p>
                 <p>Learning to handle our money and learning to live with less means nothing if we don't implement some kind of change. Making a true and meaningful change can be the hardest part. It's also the most important part.</p>
-                <button class="headerbutton">Sign up</button>
+                <button class="headerbutton">Learn now</button>
             </div>
             <div class="headerright">
                 <img src="https://i.pinimg.com/564x/4f/06/c6/4f06c668f90183a983cf19efca47d2bd.jpg" alt="Photo">
@@ -42,18 +44,18 @@
             <h2>Our best features special for you </h2>
             <div class="informations">
                 <div class="information">
-                    <div class="informationsquare">
-                      <img src="https://icons.iconarchive.com/icons/icons8/ios7/128/Photo-Video-Portrait-Mode-icon.png" alt="">
+                    <div class="informationsquare" margin-top>
+                      <img width= "100px" height = "100px"  src="https://cdn-icons-png.flaticon.com/512/3557/3557635.png" alt="">
 
                     </div>
-                    <p>Be grateful for what you have</p>
+                    <p>Powerful program</p>
                 </div>
                 <div class="information">
                     <div class="informationsquare">
                       <img src="https://icons.iconarchive.com/icons/fasticon/hand-draw-iphone/128/Photos-icon.png" alt="Photo">
 
                     </div>
-                    <p>Be at peace with yourself</p>
+                    <p>24/7 Support</p>
                 </div>
                 <div class="information">
                  
@@ -75,8 +77,8 @@
             </div>
         </section>
         <section class="containermid">
-            <p class="quote">Imagination is the only weapon in the war against reality</p>
-            <p class="signature">-Lewis Carroll</p>
+            <p class="quote">A university should be a place of light,of liberty and of learning</p>
+            <p class="signature">--Benjamin Disraeli</p>
           </div>
     <iframe width="660" height="500" src="https://www.youtube.com/embed/LcCIrV6B_iM">
 </iframe>
