--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </nav>
         <section>
-            <div class="headerleft">
+            <div class="headerleft"> 
                 <p class="bigger">Change is the End Result of All True Learning</p>
                 <p>Learning to handle our money and learning to live with less means nothing if we don't implement some kind of change. Making a true and meaningful change can be the hardest part. It's also the most important part.</p>
                 <button class="headerbutton">Learn now</button>
@@ -53,7 +53,7 @@
                 </div>
                 <div class="information">
                     <div class="informationsquare">
-                      <img src="https://icons.iconarchive.com/icons/fasticon/hand-draw-iphone/128/Photos-icon.png" alt="Photo">
+                      <img width= "100px" height = "100px" src="https://cdn-icons.flaticon.com/png/512/2268/premium/2268705.png?token=exp=1640068631~hmac=e2bdab64eaada31a51a13dc5cd317239" alt="Photo">
 
                     </div>
                     <p>24/7 Support</p>
@@ -63,17 +63,17 @@
                   
                   
                     <div class="informationsquare">
-                      <img src="https://icons.iconarchive.com/icons/sbstnblnd/plateau/128/Apps-image-viewer-icon.png" alt="">
+                      <img width= "100px" height = "100px"src="https://cdn-icons.flaticon.com/png/512/3594/premium/3594852.png?token=exp=1640069224~hmac=6ae9203865b08681961f7caedd3f9c99" alt="">
 
                     </div>
-                    <p>Be patient</p>
+                    <p>Large community</p>
                 </div>
                 <div class="information">
                     <div class="informationsquare">
-                      <img src="https://icons.iconarchive.com/icons/aha-soft/free-global-security/128/CCTV-Camera-icon.png" alt="">
+                      <img width= "150px" height = "150px" src="https://cdn-icons.flaticon.com/png/512/5786/premium/5786142.png?token=exp=1640069348~hmac=79db27f1b034ca5b123bbb0e8ec0d6c6" alt="">
 
                     </div>
-                    <p>Don't pointing out other people's flaws</p>
+                    <p>Exchange programs</p>
                 </div>
             </div>
         </section>
@@ -81,9 +81,15 @@
             <p class="quote">A university should be a place of light,of liberty and of learning</p>
             <p class="signature">--Benjamin Disraeli</p>
           </div>
-    <iframe width="660" height="500" src="https://www.youtube.com/embed/LcCIrV6B_iM">
+      <div>
+    <iframe width="620" height="450" src="https://www.youtube.com/embed/wpe1kuOk6kA">
 </iframe>
-        </section>
+        <iframe width="640" height="450" src="https://www.youtube.com/embed/DcZqBIyZ7NM">
+</iframe>
+        <iframe width="620" height="450" src="https://www.youtube.com/embed/FTm0I75TvAw">
+</iframe>
+      </div>
+       </section>
         <section class="containerbottom">
             <div class="bottombox">
                 <div class="rightbox">
