--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
                   
                   
                     <div class="informationsquare">
-                      <img width= "100px" height = "100px"src="https://cdn-icons.flaticon.com/png/512/3594/premium/3594852.png?token=exp=1640069224~hmac=6ae9203865b08681961f7caedd3f9c99" alt="">
+                      <img width= "100px" height = "100px"src="https://cdn-icons.flaticon.com/png/512/3594/premium/3594852.png?token=exp=1640518621~hmac=cc315b9967022b535233c9847035346d" alt="">
 
                     </div>
                     <p>Large community</p>
                 </div>
                 <div class="information">
                     <div class="informationsquare">
-                      <img width= "150px" height = "150px" src="https://cdn-icons.flaticon.com/png/512/5786/premium/5786142.png?token=exp=1640069348~hmac=79db27f1b034ca5b123bbb0e8ec0d6c6" alt="">
+                      <img width= "150px" height = "150px" src="https://cdn-icons-png.flaticon.com/512/1240/1240372.png" alt="">
 
                     </div>
                     <p>Exchange programs</p>
