--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
         </section>
 
     </div>
+    <div class="col my-auto text-md-left text-right "> <small> https://my.alatoo.edu.kg/ <span><img src="https://i.imgur.com/TtB6MDc.png" class="img-fluid " width="25"></span> <span><img src="https://image.similarpng.com/very-thumbnail/2020/05/Icon-Instagram-PNG.png" class="img-fluid " width="25"></span><span><img src="https://i.imgur.com/N90KDYM.png" class="img-fluid " width="25"></span></small> </div>
+                </div>
     <footer>
         © 2021 Ala-Too International University 
     </footer>
