--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
         </nav>
         <section>
             <div class="headerleft"> 
-                <p class="bigger">Change is the End Result of All True Learning</p>
-                <p>Learning to handle our money and learning to live with less means nothing if we don't implement some kind of change. Making a true and meaningful change can be the hardest part. It's also the most important part.</p>
+                <p class="bigger">International University "Ala-Too"</p>
+                <p> - Ala-Too International University is a private non-profit higher educational institution in Kyrgyzstan. The university began operating in 1996 and became one of the first universities in the Kyrgyz Republic.
+
+The teaching at the AMU is in English. To study in the first year, the applicant must know English at the Intermediate level. If the applicant does not know the language, he is sent to a one-year training, where he will intensively study it. Preparatory course cost - 2,700</p>
                 <button class="headerbutton">Learn now</button>
             </div>
             <div class="headerright">
