--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
         <section>
             <div class="headerleft"> 
-                <p class="bigger">International University "Ala-Too"</p>
+                <p class="bigger">International "Ala-Too" University</p>
                 <p> - Ala-Too International University is a private non-profit higher educational institution in Kyrgyzstan. The university began operating in 1996 and became one of the first universities in the Kyrgyz Republic.
 
 The teaching at the AMU is in English. To study in the first year, the applicant must know English at the Intermediate level. If the applicant does not know the language, he is sent to a one-year training, where he will intensively study it. Preparatory course cost - 2,700</p>
