--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ The teaching at the AMU is in English. To study in the first year, the applicant
                   
                   
                     <div class="informationsquare">
-                      <img width= "100px" height = "100px"src="https://cdn-icons.flaticon.com/png/512/3594/premium/3594852.png?token=exp=1640518621~hmac=cc315b9967022b535233c9847035346d" alt="">
+                      <img width= "100px" height = "100px"src="https://media.istockphoto.com/vectors/teamwork-social-network-icon-vector-graphic-illustration-stock-vector-id1171963676?k=20&m=1171963676&s=612x612&w=0&h=cUIeg8xzyu1hOKlniCQQs4ta4zS2TRojTkMVFRbvliE=" alt="">
 
                     </div>
                     <p>Large community</p>
