--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ The teaching at the AMU is in English. To study in the first year, the applicant
                 </div>
                 <div class="information">
                     <div class="informationsquare">
-                      <img width= "100px" height = "100px" src="https://cdn-icons.flaticon.com/png/512/2268/premium/2268705.png?token=exp=1640518469~hmac=9f0302c922d01a53f89785b2cdab4899" alt="Photo">
+                      <img width= "100px" height = "100px" src="https://media.istockphoto.com/vectors/customer-helpline-support-icon-concept-vector-illustration-technical-vector-id1139675204?k=20&m=1139675204&s=612x612&w=0&h=_ezR31CYG7Xh1OGew1bGbcNRVMB8oNjjbJ1-waLkgAc=" alt="Photo">
 
                     </div>
                     <p>24/7 Support</p>
